fix: align publication cards horizontally

--- a/_sass/_publications.scss
+++ b/_sass/_publications.scss
@@ -42,6 +42,8 @@
       margin-bottom: 1.35rem;
 
       .row {
+        display: grid;
+        grid-template-columns: minmax(260px, 320px) minmax(0, 1fr);
         margin: 0;
         padding: 1.2rem 1.25rem;
         gap: 1.35rem;
@@ -53,13 +55,18 @@
       }
 
       .row > [class*="col-"] {
+        width: auto;
+        max-width: none;
         padding-left: 0;
         padding-right: 0;
       }
 
       .row > div:not(.abbr) {
-        flex: 1 1 0;
+        min-width: 0;
         max-width: none;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
       }
 
       .preview {
@@ -67,9 +74,8 @@
       }
 
       .abbr {
-        flex: 0 0 270px;
-        width: 270px;
-        max-width: 270px;
+        width: auto;
+        max-width: none;
         margin-bottom: 0;
         display: flex;
         flex-direction: column;
@@ -124,8 +130,8 @@
 
       .title {
         margin-bottom: 0.45rem;
-        font-size: 1.45rem;
-        line-height: 1.38;
+        font-size: 1.35rem;
+        line-height: 1.34;
         font-weight: 700;
       }
 
@@ -282,13 +288,13 @@
 
     ol.bibliography li {
       .row {
+        grid-template-columns: minmax(220px, 260px) minmax(0, 1fr);
         padding: 1rem;
       }
 
       .abbr {
-        flex: 0 0 230px;
-        width: 230px;
-        max-width: 230px;
+        width: auto;
+        max-width: none;
       }
 
       .title {
@@ -306,7 +312,8 @@
 
     ol.bibliography li {
       .row {
-        display: block;
+        display: grid;
+        grid-template-columns: 1fr;
         padding: 1rem;
       }
 
